styles/style.css
/* ... */
body {
  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
  font-size: 12px;
  -webkit-font-smoothing: antialiased;
  margin: 0px;
  height: 100%;
  width: 100%;
  overflow: hidden;
}
#yourfukurou {
  width: 100%;
  height: 100%;
}

.spacer {
  flex: auto;
}

.app-root {
  width: 100%;
  height: 100%;
  display: flex;
}
.app-root__main {
  width: calc(100% - var(--sidemenu-width));
  flex: auto;
  display: flex;
  flex-direction: column;
}

.side-menu {
  display: flex;
  flex-direction: column;
  padding-top: 32px; /* for title bar inset */
  height: 100%;
  width: var(--sidemenu-width);
  background-color: var(--bg-color-light);
  flex: none;
  align-items: center;
  overflow: hidden;
  box-sizing: border-box;
  border-right: solid 1px var(--color-timeline-border);
  -webkit-user-select: none;
  -webkit-app-region: drag;
}
.side-menu > * {
  margin-top: 8px;
}
.side-menu__button {
  font-size: 30px;
  text-align: center;
  color: var(--color-light-inactive);
  cursor: pointer;
  margin-left: 22px;
}
.side-menu__button:hover {
  color: var(--color-light-hover);
}
.side-menu__button.side-menu__button_active {
  color: var(--color-light-active);
}
.side-menu__settings {
  margin-top: auto;
  font-size: 20px;
  color: var(--color-dark-inactive);
  cursor: pointer;
}
.side-menu__button-wrapper {
  display: flex;
  align-items: center;
}
.side-menu__button-indicator {
  margin: 0 6px;
  min-width: 10px;
  min-height: 10px;
  border-radius: 5px;
  background-color: var(--color-twitter);
  animation-duration: 0.5s;
  -webkit-animation-duration: 0.5s;
}

.avatar {
  cursor: pointer;
}
.avatar__inner {
  display: block;
  border-radius: calc(100% / 6);
  background-color: white;
}

.external-link {
  cursor: pointer;
  text-decoration: none;
}
.external-link:hover {
  cursor: pointer;
  text-decoration: underline;
}

.timeline {
  flex: auto;
  width: auto;
  height: 100%;
  overflow: auto;
  background-color: white;
}

.tweet__body {
  display: flex;
  padding: 8px;
  border-bottom: solid 1px var(--color-timeline-border);
}
.tweet__body:hover {
  background-color: var(--bg-color-panel-hover);
}
.tweet__body.tweet__body_mention {
  color: #fc4d5d;
  background-color: #fff7f7;
}
.tweet__body.tweet__body_mention:hover {
  background-color: #ffe7e7;
}
.tweet__body.tweet__body_focused {
  color: white;
  background-color: var(--bg-color-focused);
}
.tweet__body.tweet__body_related {
  background-color: #f7ffe9;
  color: #002010;
}
.tweet__body.tweet__body_related:hover {
  background-color: #e7efd9;
}
.tweet__body.tweet__body_user-related {
  background-color: #e8f0ff;
}
.tweet__body.tweet__body_user-related:hover {
  background-color: #d8e0ef;
}
.tweet__icon {
  flex: none;
  width: 56px;
}
.tweet__secondary {
  flex: none;
  width: 20%;
  max-width: 120px;
  display: flex;
  flex-direction: column;
  padding-right: 8px;
}
.tweet__secondary-screenname {
  flex: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: var(--text-link-color);
}
.tweet__secondary-screenname.tweet__secondary-screenname_focused {
  color: white;
}
.tweet__secondary-name {
  flex: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  font-size: 0.7rem;
  font-weight: bold;
}
.tweet__secondary-retweetedby {
  flex: none;
  margin-top: auto;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: var(--color-weak-text-link);
  font-size: 0.8rem;
  display: flex;
  align-items: center;
}
.tweet__secondary-retweetedby.tweet__secondary-retweetedby_focused {
  color: var(--color-focused-weak);
}
.tweet__small-icon {
  margin-left: 4px;
}
.tweet__primary {
  flex: auto;
  width: auto;
  display: flex;
  flex-direction: column;
}
.tweet__primary-footer {
  flex: none;
  display: flex;
  margin-top: 4px;
  font-size: 0.7rem;
}
.tweet__primary-created-at {
  flex: none;
  color: var(--color-weak-text-link);
  text-align: right;
  cursor: pointer;
  text-decoration: none;
}
.tweet__primary-created-at:hover {
  text-decoration: underline;
}
.tweet__primary-created-at.tweet__primary-created-at_focused {
  color: var(--color-focused-weak);
}
.tweet__primary-conversation {
  flex: none;
  color: var(--color-weak-text-link);
}
.tweet__primary-conversation.tweet__primary-conversation_focused {
  color: var(--color-focused-weak);
}
.tweet__text {
  flex: auto;
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.tweet__text-hashtag,
.tweet__text-mention,
.tweet__text-url {
  color: var(--text-link-color);
}
.tweet__text-hashtag.tweet__text-hashtag_focused,
.tweet__text-mention.tweet__text-mention_focused,
.tweet__text-url.tweet__text-url_focused {
  color: var(--color-focused-weak);
}
.tweet__quoted {
  display: flex;
  flex-direction: column;
  background-color: var(--bg-color-panel-hover);
  border: solid 1px var(--color-timeline-border);
  margin: 4px 0 4px 4px;
  padding: 8px;
  border-radius: 8px;
}
.tweet__quoted.tweet__quoted_focused {
  background-color: #79bcff;
  border-color: #99ccff;
}
.tweet__quoted-icon {
  margin-right: 4px;
  cursor: pointer;
}
.tweet__quoted-header {
  color: #777777;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-bottom: 4px;
}
.tweet__quoted-text {
  color: #555555;
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.tweet__quoted-text-hashtag,
.tweet__quoted-text-mention,
.tweet__quoted-text-url {
  color: #808080;
}
.tweet__media {
  display: flex;
  align-items: center;
  margin: 8px 0;
}
.tweet__media-wrapper {
  margin: 4px;
}
.tweet__media-picture {
  border-radius: 8px;
  box-sizing: border-box;
  border: 1px solid #dddddd;
  object-fit: cover;
  max-width: 100%;
  cursor: pointer;
}

.tweet-actions {
  display: flex;
  color: var(--color-weak-text-link);
}
.tweet-actions.tweet-actions_focused {
  color: var(--color-focused-weak);
}
.tweet-actions > * {
  flex: auto;
  cursor: pointer;
  margin: 0 8px;
}
/* ... */

